<resources>
    <string name="app_name">Traveller Kivi</string>
    <string name="google_maps_key">AIzaSyBqWmEcQtnMrJwxeuwpkvV7HpL--G1xscA</string>
    <string name="kivi_api_url">https://kivi.local:45976/</string>
    <string name="create_a_New_Account_Page_Tag">Create a New Account</string>
    <string name="Sign_in_button_tag">SIGN IN</string>
    <string name="enterUserNameLabelTag">Enter a User Name</string>
    <string name="enterUserNameHint">User Name</string>
    <string name="EnterEmailLabelTag">Enter Your E-Mail Address</string>
    <string name="enterEmailHint">e-mail</string>
    <string name="enterPasswordLabelTag">Enter Your Password</string>
    <string name="PasswordHint">Password</string>
    <string name="enterPasswordAgainLabelTag">Enter Your Password Again</string>
    <string name="welcomeLabelTag">Welcome to Traveller Kivi</string>
    <string name="everythingIsReadyForYouLabelTag">Everything is ready for you</string>
    <string name="exploreTheWorldLabelTag">Explore the world!</string>
    <string name="doYouHaveAccountLabelTag">Do you have an account?</string>
    <string name="signINButtonTag">SIGN IN</string>
    <string name="joinUsLabelTag">Join us</string>
    <string name="createAccountButtonTag">Create account</string>
    <string name="NoPlaceFoundWarning">No matching tours found.</string>
    <string-array name="userNames">
        <item>Helena</item>
        <item>Ben</item>
        <item>Jane</item>
        <item>Joe</item>
        <item>Zeynep</item>
    </string-array>
    <string-array name="photoDescriptions">
        <item>I am waiting for another tour for Ankara.</item>
        <item>It was nice experience!</item>
        <item>Deniz yok. Sevmedim.</item>
        <item>Nice place!</item>
        <item>See you Ankara.</item>
    </string-array>
    <string-array name="hashtags">
        <item>#anitkabir</item>
        <item>#kizilay</item>
        <item>#eymir</item>
        <item>#ankarakalesi</item>
        <item>#kelimemuzesi</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PostCreateBadge">Post Create Badge</string>
    <string name="EventJoinBadge">Event Join Badge</string>
    <string name="EventCreateBadge">Event Create Badge</string>
    <string name="CommentWriteBadge">Comment Write Badge</string>
    <string name="ImageUploadBadge">Image Upload Badge</string>
    <string name="LikeReceiveBadge">Like Receive Badge</string>
    <string name="NewName">Yeni isminiz</string>
    <string name="ChangeName">"Change Name"</string>
    <string name="Save">Save</string>
    <string name="NameUpdated">Name Updated</string>
    <string name="Cancel">Cancel</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="Apply">Apply</string>
    <string name="ChangePassword">Change Password</string>
    <string name="PasswordsDontMatch">Passwords Dont Match</string>
        <string name="toast_post_shared">Post shared successfully!</string>
        <string name="toast_post_server_error">Server error: %s</string>
        <string name="toast_choose_account_type">Choose account type.</string>
        <string name="error_invalid_username">User name cannot have special characters. ex: ? / ; .</string>
        <string name="error_invalid_email">Invalid email address.</string>
        <string name="label_enter_password_again">Enter your password again</string>
        <string name="error_passwords_do_not_match">Please enter the same password.</string>
        <string name="toast_no_matching_tours">No matching tours found.</string>
        <string name="toast_tour_load_error">Error: Tour information not available.</string>
        <string name="toast_tour_not_found">Tour not found</string>
        <string name="toast_tour_fetch_error">Failed to load tour information</string>
        <string name="toast_tour_updated">Tour updated successfully!</string>
        <string name="NetworkError">Network Error</string>
        <string name="toast_no_place_found">No place was found</string>
        <string name="toast_tour_created">Tour created: %1$s</string>
        <string name="toast_email_empty">Email field cannot be empty</string>
        <string name="toast_reset_link_demo">Demo: reset link will be sent to → %1$s</string>
        <string name="toast_user_not_found">No user matches this email</string>
        <string name="toast_recovery_server_error">Server error: failed to fetch users</string>
        <string name="toast_recovery_failure">Server error</string>
        <string name="toast_tours_fetch_error">Failed to fetch tours</string>
        <string name="toast_recommended_fetch_error">Failed to fetch recommended tours</string>
    <string name="Emailcannotbeblank">Email cannot be blank</string>
    <string name="Resetemailsended">Reset e-mail sended</string>
    <string name="Therearenousersmatchingthisemailaddress">There are no users matching this email address</string>
    <string name="Servererrorunabletoretrieveusers">Server error: unable to retrieve users</string>
    <string name="Servererror">Server error</string>
    <string name="Recommendedtoursnotavailable">Recommended tours not available</string>
    <string name="Demoresetlinkissended">Demo: reset link is sended -> </string>
    <string name="Tourscouldnotbeaccessed">Tours could not be accessed</string>
    <string name="Noplaceisfound">No place is found</string>
    <string name="signin_fill_all_info">Fill all the information</string>
    <string name="signin_user_not_found">User not found</string>
    <string name="signin_wrong_password">Wrong password</string>
    <string name="signin_server_error">Server error</string>
    <string name="signin_fill_all_fields">Please fill all fields</string>
    <string name="signin_demo_success">Demo: sign-in successful!</string>
    <string name="search_hint">#...</string>
    <string name="toast_no_post_with_hashtag">There is no post with the entered hashtag</string>
    <string name="snackbar_error_fetching_tour">Error fetching the tour. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="toast_tour_info_not_available">Error: Tour information not available.</string>
    <string name="toast_not_registered">You are not registered to the tour.</string>
    <string name="toast_error_getting_events">Error getting the events</string>
    <string name="toast_guide_load_error">Error: Couldn’t get the guide.</string>
    <string name="label_language_prefix">Language: %1$s</string>
    <string name="label_rate_prefix">Rate: %1$s</string>
    <string name="button_add_to_my_tours">Add to my tours</string>
    <string name="button_remove_from_my_tours">Remove from my tours</string>
    <string name="label_tour_details_prefix">Tour Details: %1$s</string>
    <string name="toast_error_fetching_tour_plan">Error fetching the tour</string>
        <string name="account_likes">likes</string>
        <string name="account_shared_date">Date</string>
        <string name="account_place_hashtags">#place</string>
        <string name="account_post_description">Description</string>
        <string name="addpost_title">New Post</string>
        <string name="addpost_image_preview_description">Post image preview</string>
        <string name="addpost_hint_caption">Write a caption...</string>
        <string name="addpost_hint_hashtags">#tag1 #tag2</string>
        <string name="addpost_button_share">Share</string>
        <string name="attended_search_hint">Search for a tour</string>
        <string name="attended_waiting_for_rating">The Tours Waiting For Your Rate</string>
        <string name="attended_your_tours">Your Attended Tours</string>
        <string name="edit_tour_title">Edit Tour</string>
        <string name="edit_tour_hint_name">Enter New Tour Name</string>
        <string name="edit_tour_button_change_date">Change Date</string>
        <string name="edit_tour_button_change_time">Change Time</string>
        <string name="edit_tour_button_last">last</string>
        <string name="edit_tour_button_next">next</string>
        <string name="edit_tour_button_save">Save</string>
        <string name="Launch">Launch</string>
        <string name="activity_launch_tour_catalog_title">Tour Catalog</string>
        <string name="activity_launch_tour_create_title">Create New Tour</string>
        <string name="activity_launch_tour_create_hint_name">Enter Tour Name</string>
        <string name="activity_launch_tour_create_button_select_date">Select Date</string>
        <string name="activity_launch_tour_create_button_select_time">Select Time</string>
        <string name="activity_recovery_password_title">Reset Password</string>
        <string name="activity_recovery_password_hint_email">Email</string>
        <string name="activity_recovery_password_button_send">Send Reset Link</string>
        <string name="activity_sign_in_hint_email">Email</string>
        <string name="activity_sign_in_hint_password">Password</string>
        <string name="activity_sign_in_text_forgot_password">Forgot Password?</string>
    <string name="activity_sign_in_text_signup">Don’t have an account? Sign Up</string>
        <string name="activity_tour_information_page_name">Tour Name</string>
        <string name="activity_tour_information_page_language">Language: English</string>
        <string name="activity_tour_information_page_date">Tour Date</string>
        <string name="activity_tour_information_page_rate">Rate: %1$s</string>
        <string name="activity_tour_information_page_button_add">Add to my tours</string>
        <string name="activity_tour_information_page_button_edit">Edit and Launch</string>
        <string name="Removefrommytours">Remove From My Tours</string>
        <string name="Edit">Edit</string>
        <string name="Guidename">Guide Name</string>
    <string name="TourPlan">Tour Plan</string>
    <string name="Map">Map</string>
    <string name="Chat">Chat</string>
    <string name="Comments">Comments</string>
        <string name="activity_upcoming_tours_search_hint">Search for a tour</string>
        <string name="activity_upcoming_tours_today_title">Todays Tours</string>
        <string name="activity_upcoming_tours_your_tours">Your Upcoming Tours</string>
        <string name="comments_row_comment">A Comment</string>
        <string name="create_tour_place_icon_desc">Icon</string>
        <string name="create_tour_place_name_hint">Place Name</string>
        <string name="create_tour_place_description_hint">Place Name</string>
        <string name="custom_toast_message">Custom Toast Message</string>
        <string name="dialog_change_password_hint_old">Old Password</string>
        <string name="dialog_change_password_hint_new">New Password</string>
        <string name="dialog_change_password_hint_confirm">New Password (Again)</string>
        <string name="fragment_account_launch_label">Launch a tour</string>
        <string name="fragment_account_catalog_button">catalog</string>
        <string name="fragment_account_create_button">Create</string>
        <string name="fragment_account_my_badges_label">My Badges:</string>
        <string name="fragment_account_attended_tours_button">Attended</string>
        <string name="fragment_account_upcoming_tours_button">Upcoming</string>
        <string name="fragment_account_profile_name">Profile Name</string>
        <string name="fragment_account_choose_language_button">Choose Language</string>
        <string name="fragment_create_descriptions_header">Add Descriptions to Places</string>
        <string name="fragment_create_note_label">Add Tour Note</string>
        <string name="Tours">Tours</string>
    <string name="fragment_search_tour_page_search_hint">Search tours...</string>
    <string name="fragment_search_tour_page_button_search">Search</string>
    <string name="fragment_search_tour_page_recommended_title">Recommended Tours</string>
</resources>