<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <TextView
        android:id="@+id/forgotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_recovery_password_title"
        android:textSize="22sp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/resetEmailEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_recovery_password_hint_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/dark_gray"
        android:backgroundTint="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/forgotTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/sendResetBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_recovery_password_button_send"
        android:textAllCaps="false"
        android:backgroundTint="@color/brown"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/resetEmailEt"
        app:layout_constraintStart_toStartOf="@id/resetEmailEt"
        app:layout_constraintEnd_toEndOf="@id/resetEmailEt"
        android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
